[create]無限スクロール snsシェア

--- a/app/assets/stylesheets/end_user/posts.scss
+++ b/app/assets/stylesheets/end_user/posts.scss
@@ -308,6 +308,13 @@
 
 // end_user/posts/show
 
+.fa-twitter {
+  color: #3399FF;
+}
+.twitter-btn {
+  color: black;
+}
+
 .post-detail-box {
   background-color: white;
   border: 2px solid rgba(211,211,211,0.5);
