--- a/app/views/admin/searchs/search.html.erb
+++ b/app/views/admin/searchs/search.html.erb
@@ -1,1 +1,14 @@
-<h1 class="index">searchs/search</h1>
+<div class="col-xs-10 col-xs-offset-2">
+  <div class="col-xs-10">
+    <h4 class="admin-posts">検索結果一覧</h4>
+    <% if @data.empty? %>
+      <p>該当する検索結果はありません。</p>
+    <% else %>
+      <% if @model == 'post' %>
+        <%= render 'admin/posts/index', posts: @data %>
+      <% else %>
+        <%= render 'admin/end_users/index', end_users: @data %>
+      <% end %>
+    <% end %>
+  </div>
+</div>
