--- a/app/views/end_user/posts/_search_index.html.erb
+++ b/app/views/end_user/posts/_search_index.html.erb
@@ -4,7 +4,7 @@
     <div class="content_user">
       <span>
         <%= link_to  end_user_path(public_post.end_user) do %>
-          <% if public_post.images.present? %>
+          <% if public_post.end_user.images.present? %>
             <img src='<%= public_post.end_user.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
           <% else %>
             <%= image_tag "sample.jpg", size: '50x50', class: "post_user_image" %>
@@ -14,7 +14,7 @@
         <% end %>
     </div>
     <div class="content_image">
-      <img src='<%= public_post.images.big.url %>' class="post_image" alt="ユーザー投稿写真">
+      <img src='<%= public_post.images.url %>' class="post_image" alt="ユーザー投稿写真">
     </div>
     <div class="content_foot">
       <div class="list-icon">
