--- a/app/views/end_user/end_users/show.html.erb
+++ b/app/views/end_user/end_users/show.html.erb
@@ -77,7 +77,8 @@
         <div class="tab-flex">
           <% @draft_posts.each do |draft_post| %>
             <div class="">
-              <%= link_to edit_post_path(draft_post) do %>
+              <!--エラーの可能性あり-->
+              <%= link_to edit_post_path(draft_post), 'data-turbolinks': false do %>
                 <img src='<%= draft_post.images.url %>' class="post-image" alt="投稿写真">
               <% end %>
             </div>
