--- a/app/views/end_user/posts/index.html.erb
+++ b/app/views/end_user/posts/index.html.erb
@@ -4,7 +4,7 @@
     <div class="content">
       <div class="content_user">
         <span>
-          <%= link_to  end_user_path(public_post.end_user) do %>
+          <%= link_to  end_user_path(public_post.end_user), 'data-turbolinks': false do %>
             <% if public_post.end_user.images.present? %>
               <img src='<%= public_post.end_user.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
             <% else %>
@@ -15,7 +15,7 @@
           <% end %>
       </div>
       <div class="content_image">
-        <img src='<%= public_post.images.big.url %>' class="post_image" alt="ユーザー投稿写真">
+        <img src='<%= public_post.images.url %>' class="post_image" alt="ユーザー投稿写真">
       </div>
       <div class="content_foot">
         <div class="list-icon">
@@ -24,20 +24,22 @@
             <spam id="favorite_<%= public_post.id %>">
               <%= render 'end_user/favorites/favorite', target_post: public_post %>
             </spam>
-            <%= link_to "", chat_path(public_post.end_user), class: "fas fa-sms icon-size" %>
+            <% if public_post.end_user != current_end_user %>
+              <%= link_to "", chat_path(public_post.end_user), class: "fas fa-sms icon-size" %>
+            <% end %>
             <spam id="bookmark_<%= public_post.id %>">
               <%= render 'end_user/bookmarks/bookmark', target_post: public_post %>
             </spam>
           </span>
         </div>
-        <div id="favorites-count_<%= public_post.id %>">
+        <div id="favorites-count_<%= public_post.id %>" class="favorite-count">
           <%= render 'end_user/favorites/favorite_count', target_post: public_post %>
         </div>
         <div class="post-body">
           <h4 class="post-title"><%= public_post.title %>【<%= public_post.genre.name %>】</h4>
           <h5 class="subtitle"><%= public_post.subtitle %></h5>
           <ul class="detail-list">
-            <li class="creation-time"><%= public_post.created_at.strftime('%Y/%m/%d') %></li>
+            <li class="creation-time"><%= "#{time_ago_in_words(public_post.created_at)}前" %></li>
             <li class="view-detail-btn">
               <%= link_to "詳しく見る...", post_path(public_post), class: "link-post-detail text-right" %>
             </li>
