[create]ログイン前画面レイアウト大枠完成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,10 @@
 
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Rowdies:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kosugi+Maru&family=Roboto+Mono&family=Rowdies:wght@300&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -34,8 +38,13 @@ body,
 footer {
   height: 3vh;
   max-width: 100vw;
-  border-top: 1px solid black;
+  border-top: 1px solid rgba(192,192,192,0.7);
   margin-top: auto;
+  background-color: white;
+  p {
+    margin: 0;
+    font-size: 11px;
+  }
 }
 
 .container {
@@ -91,6 +100,25 @@ footer {
   color: rgba(255,240,0,0.7);
 }
 
+// headerログイン前
+.header-logo-position {
+  margin-left: 60px;
+}
+.head-right-nav-login {
+  margin: 0 5px 0 150px;
+}
+
+.head-nav {
+  text-decoration: none;
+  color: black;
+  font-family: 'Roboto Mono', monospace;
+  font-weight: 600;
+}
+
+.head-right-nav {
+  margin: 0 5px 0 35px;
+}
+
 // header-admin
 #wrapper {
 margin-left: 230px;
@@ -134,4 +162,223 @@ background: #333;
 // 無限スクロール
 ul.pagination {
   display: none;
+}
+
+// ログイン画面
+.login-container {
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &_box {
+    margin-top: 50px;
+    width: 380px;
+    height: 430px;
+    border: 1px solid rgba(192,192,192,0.7);
+    border-radius: 0.2em;
+    background: white;
+    .login-head-en {
+      margin: 0;
+      padding-top: 15px;
+      font-family: 'Rowdies', cursive;
+      font-size: 30px;
+    }
+    .login-head-ja {
+      font-family: 'Kosugi Maru', sans-serif;
+      margin: 0 10px 20px 10px;
+      padding: 10px;
+      border-bottom: 1px gray dotted;
+    }
+    .new_end_user {
+      .field {
+        margin-top: 14px;
+
+        .login-label {
+          font-family: 'Kosugi Maru', sans-serif;
+          font-size: 14px;
+          margin-bottom: 10px;
+        }
+        .login-mail-form, .login-password-form {
+          padding: 5px;
+          width: 260px;
+          border: none;
+          border: 1px solid gray;
+          border-radius: 0.5em;
+        }
+      }
+      .actions {
+        margin: 10px 10px 24px 10px;
+        padding-bottom: 20px;
+        border-bottom: 1px gray dotted;
+
+        .login-btn {
+          padding: 4px 44px;
+          font-family: 'Roboto Mono', monospace;
+          font-weight: 600;
+          color: white;
+          background: rgba(106,90,205,0.8);
+          border: 1px solid rgba(106,90,205,0.8);
+          box-shadow: 0 0 4px gray;
+        }
+      }
+    }
+    .guest-login {
+
+      a.guest-login-btn {
+        padding: 4px 20px;
+        font-family: 'Kosugi Maru', sans-serif;
+        font-weight: 600;
+        color: white;
+        background: rgba(255,165,0,0.8);
+        border: 1px solid rgba(255,165,0,0.8);
+        box-shadow: 0 0 4px gray;
+      }
+    }
+  }
+}
+
+// サインアップ
+.signup-container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &_box {
+    margin-top: 45px;
+    width: 450px;
+    min-height: 430px;
+    border: 1px solid rgba(192,192,192,0.7);
+    border-radius: 0.2em;
+    background: white;
+    .signup-head-en {
+      margin: 0;
+      padding-top: 5px;
+      font-family: 'Rowdies', cursive;
+      font-size: 30px;
+    }
+    .signup-head-ja {
+      font-family: 'Kosugi Maru', sans-serif;
+      margin: 0 10px 20px 10px;
+      padding: 10px;
+      border-bottom: 1px gray dotted;
+    }
+    .new_end_user {
+      .field {
+        margin-top: 14px;
+
+        .signup-label {
+          font-family: 'Kosugi Maru', sans-serif;
+          font-size: 14px;
+          margin-bottom: 10px;
+        }
+        .signup-mail-form, .signup-password-form, .signup-name-form {
+          padding: 5px;
+          width: 280px;
+          border: none;
+          border: 1px solid gray;
+          border-radius: 0.5em;
+        }
+      }
+      .signup-actions {
+        margin: 14px 10px 0px 10px;
+        padding-bottom: 20px;
+        border-bottom: 1px gray dotted;
+
+        .signup-btn {
+          padding: 4px 40px;
+          font-family: 'Roboto Mono', monospace;
+          font-weight: 600;
+          color: white;
+          background: rgba(72,61,139,0.8);
+          border: 1px solid rgba(72,61,139,0.8);
+          box-shadow: 0 0 4px gray;
+        }
+      }
+    }
+    .guest-signup {
+      margin-bottom: 20px;
+      a.guest-signup-btn {
+        padding: 4px 20px;
+        font-family: 'Kosugi Maru', sans-serif;
+        font-weight: 600;
+        color: white;
+        background: rgba(255,165,0,0.8);
+        border: 1px solid rgba(255,165,0,0.8);
+        box-shadow: 0 0 4px gray;
+      }
+    }
+  }
+}
+
+// 管理者ログイン
+.admin-login-container {
+  margin-top: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  &_box {
+    margin-top: 50px;
+    width: 380px;
+    height: 430px;
+    border: 1px solid rgba(192,192,192,0.7);
+    border-radius: 0.2em;
+    background: white;
+    .admin-head-en {
+      margin: 0;
+      padding-top: 15px;
+      font-family: 'Rowdies', cursive;
+      font-size: 30px;
+    }
+    .admin-head-ja {
+      font-family: 'Kosugi Maru', sans-serif;
+      margin: 0 10px 20px 10px;
+      padding: 10px;
+      border-bottom: 1px gray dotted;
+    }
+    .new_admin {
+      .field {
+        margin-top: 14px;
+
+        .admin-label {
+          font-family: 'Kosugi Maru', sans-serif;
+          font-size: 14px;
+          margin-bottom: 10px;
+        }
+        .admin-mail-form, .admin-password-form {
+          padding: 5px;
+          width: 260px;
+          border: none;
+          border: 1px solid gray;
+          border-radius: 0.5em;
+        }
+      }
+      .admin-actions {
+        margin: 10px 10px 24px 10px;
+        padding-bottom: 20px;
+        border-bottom: 1px gray dotted;
+
+        .admin-login-btn {
+          padding: 4px 65px;
+          font-family: 'Roboto Mono', monospace;
+          font-weight: 600;
+          color: white;
+          background: rgba(106,90,205,0.8);
+          border: 1px solid rgba(106,90,205,0.8);
+          box-shadow: 0 0 4px gray;
+        }
+      }
+    }
+    .admin-guest-login {
+
+      a.admin-guest-btn {
+        padding: 4px 20px;
+        font-family: 'Kosugi Maru', sans-serif;
+        font-weight: 600;
+        color: white;
+        background: rgba(255,165,0,0.8);
+        border: 1px solid rgba(255,165,0,0.8);
+        box-shadow: 0 0 4px gray;
+      }
+    }
+  }
 }
