--- a/app/views/end_user/posts/index.html.erb
+++ b/app/views/end_user/posts/index.html.erb
@@ -56,3 +56,7 @@
 </div>
 <!--検索用サイドバー-->
 <%= render 'index', genres: @genres %>
+
+<div class="scroll-event">
+  <a href="#" class="scroll-btn-post"><i class="fas fa-long-arrow-alt-up"></i></a>
+</div>
