--- a/app/assets/stylesheets/end_user/posts.scss
+++ b/app/assets/stylesheets/end_user/posts.scss
@@ -291,7 +291,7 @@
   .search {
     margin: 10px 0;
     padding-bottom: 10px;
-    border-bottom: 2px solid gray;
+    border-bottom: 2px dotted gray;
 
     .search_form {
       padding: 4px;
@@ -320,7 +320,7 @@
   .sort-menu {
     margin-top: 15px;
     padding-bottom: 15px;
-    border-bottom : 2px solid gray;
+    border-bottom : 2px dotted gray;
 
     .btn-default {
       padding: 7px 12px;
@@ -482,4 +482,16 @@
   font-weight: 600;
 }
 
-
+.scroll-btn-post {
+  position: fixed;
+  bottom: 50px;
+  right: 200px;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border-radius: 50%;
+  box-shadow: 0 0 6px gray;
+}
