--- a/app/views/end_user/searchs/search.html.erb
+++ b/app/views/end_user/searchs/search.html.erb
@@ -11,3 +11,7 @@
   <% end %>
 </div>
 <%= render 'search_sidebar', genres: @genres %>
+
+<div class="scroll-event">
+  <a href="#" class="scroll-btn-post"><i class="fas fa-long-arrow-alt-up"></i></a>
+</div>
